<resources>
    <string name="app_name">New Vega</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_screen">Home Screen</string>
    <string name="navigationmenu_home">Home</string>
    <string name="navigationmenu_placeACall">Place A Call</string>
    <string name="navigationmenu_showContent">Show Content</string>
    <string name="navigationmenu_settings">Settings</string>
    <string name="navigationmenu_help">Help</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="button_placeACall_text">Place A Call</string>
    <string name="button_endCall_text">End Call</string>
    <string name="message_placeACall">Please wait for placing a call &#8230;</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="copyright_declaration">© 2015 Polycom</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="option_item_administration_title">Administration</string>
    <string name="option_item_placeACall_title">Place A Call</string>
    <string name="option_item_showContent_title">Show Content</string>
    <string name="option_item_keypad_title">Keypad</string>
    <string name="option_item_contacts_title">Contacts</string>
    <string name="option_item_recentCalls_title">Recent Calls</string>
    <string name="option_item_systemInformation_title">System Information</string>
    <string name="option_item_userSettings_title">User Settings</string>
    <string name="option_item_favorite_title">Favorite</string>
    <string name="option_item_gs_control">GS Control</string>
    <string name="display_name_hint">Display name</string>
    <string name="destination_ip_hint">Destination IP/Number</string>
    <string name="add_contact_dialog_title">Add new contact</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="in_call_title_format">Calling with %s</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="cameraon">Camera On</string>
    <string name="cameraoff">Camera Off</string>
    <string name="en">American English</string>
    <string name="ar">العَرَبِيَّة</string>
    <string name="enGB">British English</string>
    <string name="deDE">Deutsch</string>
    <string name="esES">Español</string>
    <string name="frFR">Français</string>
    <string name="itIT">Italiano</string>
    <string name="jaJP">日本語</string>
    <string name="koKR">한국어</string>
    <string name="huHU">Magyar</string>
    <string name="nbNO">Norsk</string>
    <string name="plPL">Polski</string>
    <string name="ptPT">Português</string>
    <string name="ruRU">Pyccknñ</string>
    <string name="zhTW">繁體中文</string>
    <string name="button_logs_text">Logs</string>
    <string name="button_checkupdate_text">Check Update</string>
    <string name="edittext_administration_currentpassword_hint">Current password</string>
    <string name="edittext_administration_newpassword_hint">New password</string>
    <string name="edittext_administration_confirmnewpassword_hint">Confirm password</string>
    <string name="checkupdate_alreadylatestversion_message">You have already got the latest version, enjoy!</string>
    <string name="button_pair_text">Pair</string>
    <string name="button_demo_text">Demo</string>
    <string name="zh">简体中文</string>
    <string name="button_changepassword_text">Change Password</string>
    <string name="radiobutton_export_text">Export</string>
    <string name="radiobutton_back_text">Back</string>
</resources>
