<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fragment_changepassword_currentPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/edittext_administration_currentpassword_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/fragment_changepassword_newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/edittext_administration_newpassword_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/fragment_changepassword_confirmNewPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/edittext_administration_confirmnewpassword_hint"
        android:inputType="textPassword" />
</LinearLayout>